<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racsecar</name>
  <version>0.0.0</version>
  <description>ROS2 package to control a PID</description>
  <maintainer email="zsozsogellert@gmail.com">barna154</maintainer>
  <license>GNU General Public License v3.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <build_type>ament_cmake</build_type>
  </export>
</package>